Simplify migration logic