@@ -5,7 +5,8 @@ import java.util.Arrays;
 import java.util.List;
 import java.util.Map;
 import java.util.UUID;
-
+import lombok.RequiredArgsConstructor;
+import lombok.extern.log4j.Log4j2;
 import org.folio.des.domain.dto.BursarExportDataToken;
 import org.folio.des.domain.dto.BursarExportFilter;
 import org.folio.des.domain.dto.BursarExportFilterAge;
@@ -25,223 +26,118 @@ import org.folio.des.domain.dto.BursarExportTokenFeeMetadata;
 import org.folio.des.domain.dto.BursarExportTokenLengthControl;
 import org.folio.des.domain.dto.BursarExportTokenUserDataOptional;
 import org.folio.des.domain.dto.BursarExportTransferCriteria;
-import org.folio.des.domain.dto.BursarExportTransferCriteriaConditionsInner;
 import org.folio.des.domain.dto.BursarExportTransferCriteriaElse;
 import org.folio.des.domain.dto.ExportTypeSpecificParameters;
 import org.folio.des.domain.dto.Job;
 import org.folio.des.domain.dto.JobWithLegacyBursarParameters;
-import org.folio.des.domain.dto.JobWithLegacyBursarParametersCollection;
 import org.folio.des.domain.dto.LegacyBursarFeeFines;
 import org.folio.des.domain.dto.LegacyBursarFeeFinesTypeMapping;
 import org.folio.des.domain.dto.LegacyBursarFeeFinesTypeMappings;
 import org.folio.des.service.JobService;
+import org.folio.des.service.util.JobMapperUtil;
 import org.springframework.stereotype.Service;
-
-import lombok.RequiredArgsConstructor;
-import lombok.extern.log4j.Log4j2;
 
 @Service
 @Log4j2
 @RequiredArgsConstructor
 public class BursarMigrationService {
-  private static final Integer DEFAULT_LIMIT = 10000;
 
   private static final String BURSAR_EXPORT_MIGRATION_HEADER_CONSTANT = "LIB02";
 
-  public boolean isLegacyJob(JobWithLegacyBursarParameters job) {
-    LegacyBursarFeeFines bursarFeeFines = job
+  public void updateLegacyBursarJobs(
+    BursarExportLegacyJobService legacyJobService,
+    JobService jobService
+  ) {
+    List<JobWithLegacyBursarParameters> jobs = legacyJobService.getAllLegacyJobs();
+    log.info("found {} legacy jobs to update", jobs.size());
+
+    for (JobWithLegacyBursarParameters jobWithLegacyBursarParameters : jobs) {
+      log.info("updating job: {}", jobWithLegacyBursarParameters);
+
+      Job newJob = convertLegacyJob(jobWithLegacyBursarParameters);
+
+      // upsert recreated job, does not send to kafka despite the name
+      jobService.upsertAndSendToKafka(newJob, false);
+    }
+  }
+
+  public static Job convertLegacyJob(JobWithLegacyBursarParameters legacyJob) {
+    LegacyBursarFeeFines legacyParams = legacyJob
       .getExportTypeSpecificParameters()
       .getBursarFeeFines();
 
-    return bursarFeeFines.getDaysOutstanding() != null;
-  }
-
-  public void recreateLegacyJobs(
-    BursarExportLegacyJobService bursarExportLegacyJobService,
-    JobService jobService
-  ) {
-    log.info("searching for legacy jobs");
-    JobWithLegacyBursarParametersCollection response = bursarExportLegacyJobService.get(
-      0,
-      DEFAULT_LIMIT,
-      "status==SCHEDULED"
-    );
-    List<JobWithLegacyBursarParameters> jobsToRecreate = new ArrayList<>();
-
-    int total = response.getTotalRecords();
-    jobsToRecreate.addAll(response.getJobRecords());
-    while (jobsToRecreate.size() < total) {
-      response =
-        bursarExportLegacyJobService.get(
-          jobsToRecreate.size(),
-          DEFAULT_LIMIT,
-          "status==SCHEDULED"
-        );
-      jobsToRecreate.addAll(response.getJobRecords());
-    }
-
-    for (JobWithLegacyBursarParameters jobWithLegacyBursarParameters : jobsToRecreate) {
-      log.info("job to recreate: {}", jobWithLegacyBursarParameters);
-      if (isLegacyJob(jobWithLegacyBursarParameters)) {
-        Job newJob = prepareNewJob();
-
-        newJob
-          .getExportTypeSpecificParameters()
-          .setVendorEdiOrdersExportConfig(
-            jobWithLegacyBursarParameters
-              .getExportTypeSpecificParameters()
-              .getVendorEdiOrdersExportConfig()
-          );
-        newJob
-          .getExportTypeSpecificParameters()
-          .setQuery(jobWithLegacyBursarParameters.getExportTypeSpecificParameters().getQuery());
-        newJob
-          .getExportTypeSpecificParameters()
-          .seteHoldingsExportConfig(
-            jobWithLegacyBursarParameters
-              .getExportTypeSpecificParameters()
-              .geteHoldingsExportConfig()
-          );
-        newJob
-          .getExportTypeSpecificParameters()
-          .setAuthorityControlExportConfig(
-            jobWithLegacyBursarParameters
-              .getExportTypeSpecificParameters()
-              .getAuthorityControlExportConfig()
-          );
-
-        LegacyBursarFeeFines legacyBursarParams = jobWithLegacyBursarParameters
-          .getExportTypeSpecificParameters()
-          .getBursarFeeFines();
-
-        // filter
-        BursarExportFilterCondition filterBase = new BursarExportFilterCondition();
-        filterBase.setOperation(BursarExportFilterCondition.OperationEnum.AND);
-        List<BursarExportFilter> filterConditions = new ArrayList<>();
-        BursarExportFilterAge ageFilter = new BursarExportFilterAge();
-        ageFilter.setNumDays(legacyBursarParams.getDaysOutstanding());
-        ageFilter.setCondition(
-          BursarExportFilterAge.ConditionEnum.GREATER_THAN_EQUAL
-        );
-        BursarExportFilterCondition patronGroupListFilter = new BursarExportFilterCondition();
-        patronGroupListFilter.setOperation(
-          BursarExportFilterCondition.OperationEnum.OR
-        );
-
-        List<BursarExportFilter> patronGroupFilters = new ArrayList<>();
-        for (String patronGroupId : legacyBursarParams.getPatronGroups()) {
-          BursarExportFilterPatronGroup patronGroupFilter = new BursarExportFilterPatronGroup();
-          patronGroupFilter.setPatronGroupId(UUID.fromString(patronGroupId));
-
-          patronGroupFilters.add(patronGroupFilter);
-        }
-
-        patronGroupListFilter.setCriteria(patronGroupFilters);
-
-        filterConditions.add(ageFilter);
-        filterConditions.add(patronGroupListFilter);
-
-        filterBase.setCriteria(filterConditions);
-
-        newJob
-          .getExportTypeSpecificParameters()
-          .getBursarFeeFines()
-          .setFilter(filterBase);
-
-        // item type token and description token
-        List<BursarExportTokenConditional> typeMappingTokens = mapTypeMappingsToTokens(
-          legacyBursarParams.getTypeMappings()
-        );
-        BursarExportTokenConditional itemTypeToken = typeMappingTokens.get(0);
-        BursarExportTokenConditional descriptionToken = typeMappingTokens.get(
-          1
-        );
-
-        newJob
-          .getExportTypeSpecificParameters()
-          .getBursarFeeFines()
-          .getData()
-          .set(3, itemTypeToken);
-        newJob
-          .getExportTypeSpecificParameters()
-          .getBursarFeeFines()
-          .getData()
-          .set(9, descriptionToken);
-
-        newJob
-          .getExportTypeSpecificParameters()
-          .getBursarFeeFines()
-          .getTransferInfo()
-          .getElse()
-          .setAccount(legacyBursarParams.getTransferAccountId());
-
-        newJob.setId(jobWithLegacyBursarParameters.getId());
-        newJob.setName(jobWithLegacyBursarParameters.getName());
-        newJob.setDescription(jobWithLegacyBursarParameters.getDescription());
-        newJob.setSource(jobWithLegacyBursarParameters.getSource());
-        newJob.setIsSystemSource(jobWithLegacyBursarParameters.getIsSystemSource());
-        newJob.setTenant(jobWithLegacyBursarParameters.getTenant());
-        newJob.setType(jobWithLegacyBursarParameters.getType());
-        newJob.setStatus(jobWithLegacyBursarParameters.getStatus());
-        newJob.setFiles(jobWithLegacyBursarParameters.getFiles());
-        newJob.setFileNames(jobWithLegacyBursarParameters.getFileNames());
-        newJob.setStartTime((jobWithLegacyBursarParameters.getStartTime()));
-        newJob.setEndTime(jobWithLegacyBursarParameters.getEndTime());
-        newJob.setMetadata(jobWithLegacyBursarParameters.getMetadata());
-        newJob.setOutputFormat(jobWithLegacyBursarParameters.getOutputFormat());
-        newJob.setErrorDetails(jobWithLegacyBursarParameters.getErrorDetails());
-        newJob.setIdentifierType(jobWithLegacyBursarParameters.getIdentifierType());
-        newJob.setEntityType(jobWithLegacyBursarParameters.getEntityType());
-        newJob.setProgress(jobWithLegacyBursarParameters.getProgress());
-
-        // upsert recreated job
-        jobService.upsertAndSendToKafka(newJob, true);
-      }
-    }
-
-    log.info("recreated {} legacy jobs", jobsToRecreate.size());
-  }
-
-  public Job prepareNewJob() {
-    Job job = new Job();
     ExportTypeSpecificParameters exportTypeSpecificParameters = new ExportTypeSpecificParameters();
     BursarExportJob bursarExportJob = new BursarExportJob();
 
-    // filter
-    BursarExportFilterCondition filterBase = new BursarExportFilterCondition();
-    filterBase.setOperation(BursarExportFilterCondition.OperationEnum.AND);
+    bursarExportJob.setFilter(convertLegacyJobFilters(legacyParams));
+    bursarExportJob.setHeader(convertLegacyJobHeader());
+    bursarExportJob.setData(convertLegacyJobData(legacyParams));
+    bursarExportJob.setFooter(null);
+    bursarExportJob.setTransferInfo(convertLegacyJobTransfer(legacyParams));
 
-    List<BursarExportFilter> filterConditions = new ArrayList<>();
+    // new parameters not in legacy jobs
+    bursarExportJob.setGroupByPatron(false);
+    bursarExportJob.setGroupByPatronFilter(null);
 
+    exportTypeSpecificParameters.setBursarFeeFines(bursarExportJob);
+
+    return JobMapperUtil.legacyBursarToNewDto(
+      legacyJob,
+      exportTypeSpecificParameters
+    );
+  }
+
+  private static BursarExportFilterCondition convertLegacyJobFilters(
+    LegacyBursarFeeFines params
+  ) {
+    // age
     BursarExportFilterAge ageFilter = new BursarExportFilterAge();
-    ageFilter.setNumDays(null);
+    ageFilter.setNumDays(params.getDaysOutstanding());
     ageFilter.setCondition(
       BursarExportFilterAge.ConditionEnum.GREATER_THAN_EQUAL
     );
-
     BursarExportFilterCondition patronGroupListFilter = new BursarExportFilterCondition();
     patronGroupListFilter.setOperation(
       BursarExportFilterCondition.OperationEnum.OR
     );
-    List<BursarExportFilter> patronGroupFilters = new ArrayList<>();
 
+    // patron groups
+    List<BursarExportFilter> patronGroupFilters = new ArrayList<>();
+    for (String patronGroupId : params.getPatronGroups()) {
+      BursarExportFilterPatronGroup patronGroupFilter = new BursarExportFilterPatronGroup();
+      patronGroupFilter.setPatronGroupId(UUID.fromString(patronGroupId));
+      patronGroupFilters.add(patronGroupFilter);
+    }
     patronGroupListFilter.setCriteria(patronGroupFilters);
 
-    filterConditions.add(ageFilter);
-    filterConditions.add(patronGroupListFilter);
+    // container
+    BursarExportFilterCondition filterBase = new BursarExportFilterCondition();
+    filterBase.setOperation(BursarExportFilterCondition.OperationEnum.AND);
+    filterBase.setCriteria(List.of(ageFilter, patronGroupListFilter));
+    return filterBase;
+  }
 
-    filterBase.setCriteria(filterConditions);
+  // the legacy header consisted just of the string "LIB02"
+  private static List<BursarExportHeaderFooter> convertLegacyJobHeader() {
+    BursarExportTokenConstant constant = new BursarExportTokenConstant();
+    constant.setValue(BURSAR_EXPORT_MIGRATION_HEADER_CONSTANT);
 
-    bursarExportJob.setFilter(filterBase);
+    BursarExportTokenConstant newline = new BursarExportTokenConstant();
+    constant.setValue("\n");
 
-    // header
-    List<BursarExportHeaderFooter> header = new ArrayList<>();
-    BursarExportTokenConstant constantHeaderToken = new BursarExportTokenConstant();
-    constantHeaderToken.setValue(BURSAR_EXPORT_MIGRATION_HEADER_CONSTANT);
-    header.add(constantHeaderToken);
-    bursarExportJob.setHeader(header);
+    return List.of(constant, newline);
+  }
 
-    //data
+  private static List<BursarExportDataToken> convertLegacyJobData(
+    LegacyBursarFeeFines params
+  ) {
+    List<BursarExportTokenConditional> typeMappingTokens = mapTypeMappingsToTokens(
+      params.getTypeMappings()
+    );
+    // special if-else tokens for item type and description
+    BursarExportTokenConditional itemTypeToken = typeMappingTokens.get(0);
+    BursarExportTokenConditional descriptionToken = typeMappingTokens.get(1);
+
     //user's external id token
     BursarExportTokenUserDataOptional userIDToken = new BursarExportTokenUserDataOptional();
     userIDToken.setValue(
@@ -309,69 +205,35 @@ public class BursarMigrationService {
     BursarExportTokenConstant termToken = new BursarExportTokenConstant();
     termToken.setValue("    ");
 
-    // item type token and description token
-    BursarExportTokenConditional itemTypeToken = new BursarExportTokenConditional();
-    BursarExportTokenConditional descriptionToken = new BursarExportTokenConditional();
-
-    List<BursarExportTokenConditionalConditionsInner> itemTypeConditions = new ArrayList<>();
-    List<BursarExportTokenConditionalConditionsInner> descriptionConditions = new ArrayList<>();
-
-    itemTypeToken.setConditions(itemTypeConditions);
-    descriptionToken.setConditions(descriptionConditions);
-
-    // default for itemType token
-    BursarExportTokenConstant emptyDataToken = new BursarExportTokenConstant();
-    emptyDataToken.setValue("            ");
-    itemTypeToken.setElse(emptyDataToken);
-
-    // default for description token
-    BursarExportTokenFeeMetadata feeFineTypeToken = new BursarExportTokenFeeMetadata();
-    feeFineTypeToken.setValue(BursarExportTokenFeeMetadata.ValueEnum.NAME);
-    descriptionToken.setElse(feeFineTypeToken);
-
-    List<BursarExportDataToken> dataTokens = new ArrayList<>(
-      Arrays.asList(
-        userIDToken,
-        userIdPadding,
-        feeAmountToken,
-        itemTypeToken,
-        monthToken,
-        dayToken,
-        yearToken,
-        sfsToken,
-        termToken,
-        descriptionToken
-      )
+    return List.of(
+      userIDToken,
+      userIdPadding,
+      feeAmountToken,
+      itemTypeToken,
+      monthToken,
+      dayToken,
+      yearToken,
+      sfsToken,
+      termToken,
+      descriptionToken
     );
-
-    bursarExportJob.setData(dataTokens);
-
-    // footer
-    bursarExportJob.setFooter(null);
-
-    // transfer information
-    BursarExportTransferCriteria transferCriteria = new BursarExportTransferCriteria();
-
-    List<BursarExportTransferCriteriaConditionsInner> transferConditions = new ArrayList<>();
-
-    BursarExportTransferCriteriaElse transferInfo = new BursarExportTransferCriteriaElse();
-
-    transferCriteria.setConditions(transferConditions);
-    transferCriteria.setElse(transferInfo);
-
-    bursarExportJob.setTransferInfo(transferCriteria);
-
-    // other bursar export parameters
-    bursarExportJob.setGroupByPatron(false);
-    bursarExportJob.setGroupByPatronFilter(null);
-
-    exportTypeSpecificParameters.setBursarFeeFines(bursarExportJob);
-    job.setExportTypeSpecificParameters(exportTypeSpecificParameters);
-
-    return job;
   }
 
-  public List<BursarExportTokenConditional> mapTypeMappingsToTokens(
+  private static BursarExportTransferCriteria convertLegacyJobTransfer(
+    LegacyBursarFeeFines legacyParams
+  ) {
+    // legacy exports would transfer all to one account, so we don't have any conditions and use
+    // the account as the default (else)
+    BursarExportTransferCriteriaElse transferElse = new BursarExportTransferCriteriaElse();
+    transferElse.setAccount(legacyParams.getTransferAccountId());
+
+    BursarExportTransferCriteria transferCriteria = new BursarExportTransferCriteria();
+    transferCriteria.setConditions(List.of());
+    transferCriteria.setElse(transferElse);
+    return transferCriteria;
+  }
+
+  public static List<BursarExportTokenConditional> mapTypeMappingsToTokens(
     LegacyBursarFeeFinesTypeMappings typeMappings
   ) {
     // item type token and description token
@@ -385,9 +247,14 @@ public class BursarMigrationService {
     descriptionToken.setConditions(descriptionConditions);
 
     if (typeMappings != null) {
-      for (Map.Entry<String, List<LegacyBursarFeeFinesTypeMapping>> entry : typeMappings.entrySet()) {
+      for (Map.Entry<String, ?> entry : typeMappings.entrySet()) {
         String ownerID = entry.getKey();
-        List<LegacyBursarFeeFinesTypeMapping> typeMappingList = entry.getValue();
+
+        // unfortunately, LegacyBursarFeeFinesTypeMappings is generated by openapi, which gives it only Map<String List>
+        // this casts it to the correct type
+        @SuppressWarnings("unchecked")
+        List<LegacyBursarFeeFinesTypeMapping> typeMappingList = (List<LegacyBursarFeeFinesTypeMapping>) entry.getValue();
+
         for (LegacyBursarFeeFinesTypeMapping typeMapping : typeMappingList) {
           BursarExportTokenConditionalConditionsInner itemTypeConditionalConditionsInner = new BursarExportTokenConditionalConditionsInner();
           BursarExportTokenConditionalConditionsInner descriptionTokenConditionalConditionsInner = new BursarExportTokenConditionalConditionsInner();
@@ -433,12 +300,10 @@ public class BursarMigrationService {
       }
     }
 
-    // default for itemType token
     BursarExportTokenConstant emptyDataToken = new BursarExportTokenConstant();
     emptyDataToken.setValue("            ");
     itemTypeToken.setElse(emptyDataToken);
 
-    // default for description token
     BursarExportTokenFeeMetadata feeFineTypeToken = new BursarExportTokenFeeMetadata();
     feeFineTypeToken.setValue(BursarExportTokenFeeMetadata.ValueEnum.NAME);
     descriptionToken.setElse(feeFineTypeToken);
